--- a/src/components/homepage/index.astro
+++ b/src/components/homepage/index.astro
@@ -164,7 +164,7 @@ const tempImageFilename = `${PUBLIC_FM_PUBLIC_IMAGE_URL_PREFIX}banner-2000x673`
             bannerTextInner.style.backgroundColor = null
 
             const fontRate = Math.min(widthForBannerText * 0.0023,bannerActualHeight * 0.0055)
-            bannerTextOuter.style.width = `${widthForBannerText}px`
+            bannerTextOuter.style.width = `${Math.min(innerWidth, Math.abs(widthForBannerText))}px`
 
             const fontPoints = [1,6,1,6]
             const spans = bannerTextOuter.getElementsByTagName('span')
@@ -190,7 +190,7 @@ const tempImageFilename = `${PUBLIC_FM_PUBLIC_IMAGE_URL_PREFIX}banner-2000x673`
             bannerTextInner.style.backgroundColor = null
 
             widthForBannerText = Math.max(widthForBannerText, bannerActualHeight * 0.7)
-            bannerTextOuter.style.width = `${widthForBannerText}px`
+            bannerTextOuter.style.width = `${Math.min(innerWidth, Math.abs(widthForBannerText))}px`
 
             const fontRate = Math.min(widthForBannerText * 0.7,bannerActualHeight * 0.005)
             const fontPoints = [1,3,1,3]
@@ -218,7 +218,7 @@ const tempImageFilename = `${PUBLIC_FM_PUBLIC_IMAGE_URL_PREFIX}banner-2000x673`
             bannerTextInner.style.backgroundColor = 'rgba(249,236,245,0.7)'
 
             const fontRate = Math.min(innerWidth * 0.005,bannerActualHeight * 0.004)
-            bannerTextOuter.style.width = `${widthForBannerText}px`
+            bannerTextOuter.style.width = `${Math.min(innerWidth, Math.abs(widthForBannerText))}px`
 
             const fontPoints = [1,4,1,4]
             const lineHeightPoints = [4,4,1.2,4]
