--- a/src/components/layout/header/menu-sidebar.astro
+++ b/src/components/layout/header/menu-sidebar.astro
@@ -3,7 +3,7 @@ import CloseSidebarIcon from "./icons/close-sidebar-icon.astro"
 import pages from './pages.json'
 ---
 
-<input type="checkbox" hidden id="menu-sidebar-checkbox" class="peer/menu fixed" />
+<input type="checkbox" hidden id="menu-sidebar-checkbox" class="peer/menu" />
 <div id="menu-sidebar" class="peer-checked/menu:left-0 fixed top-0 left-[-400px] h-full w-full max-w-[400px] bg-white shadow-lg transition-all duration-300 z-50">
     <div class="flex flex-row-reverse">
         <label for="menu-sidebar-checkbox" class="cursor-pointer p-2">
